syntax = "proto3";

// custom options need descriptor file
import "google/protobuf/descriptor.proto";

package me.lyh.protobuf.generic.proto;

option optimize_for = SPEED;

enum Color {
    BLACK = 0;
    WHITE = 1;
    GREEN = 2;
}

message Optional {
    double double_field = 1;
    float float_field = 2;
    int32 int32_field = 3;
    int64 int64_field = 4;
    uint32 uint32_field = 5;
    uint64 uint64_field = 6;
    sint32 sint32_field = 7;
    sint64 sint64_field = 8;
    fixed32 fixed32_field = 9;
    fixed64 fixed64_field = 10;
    sfixed32 sfixed32_field = 11;
    sfixed64 sfixed64_field = 12;
    bool bool_field = 13;
    string string_field = 14;
    bytes bytes_field = 15;
    Color color_field = 16;
}

message Repeated {
    repeated double double_field = 1;
    repeated float float_field = 2;
    repeated int32 int32_field = 3;
    repeated int64 int64_field = 4;
    repeated uint32 uint32_field = 5;
    repeated uint64 uint64_field = 6;
    repeated sint32 sint32_field = 7;
    repeated sint64 sint64_field = 8;
    repeated fixed32 fixed32_field = 9;
    repeated fixed64 fixed64_field = 10;
    repeated sfixed32 sfixed32_field = 11;
    repeated sfixed64 sfixed64_field = 12;
    repeated bool bool_field = 13;
    repeated string string_field = 14;
    repeated bytes bytes_field = 15;
    repeated Color color_field = 16;
}

message RepeatedPacked {
    repeated double double_field = 1 [packed=true];
    repeated float float_field = 2 [packed=true];
    repeated int32 int32_field = 3 [packed=true];
    repeated int64 int64_field = 4 [packed=true];
    repeated uint32 uint32_field = 5 [packed=true];
    repeated uint64 uint64_field = 6 [packed=true];
    repeated sint32 sint32_field = 7 [packed=true];
    repeated sint64 sint64_field = 8 [packed=true];
    repeated fixed32 fixed32_field = 9 [packed=true];
    repeated fixed64 fixed64_field = 10 [packed=true];
    repeated sfixed32 sfixed32_field = 11 [packed=true];
    repeated sfixed64 sfixed64_field = 12 [packed=true];
    repeated bool bool_field = 13 [packed=true];
    repeated Color color_field = 16 [packed=true];
}

message RepeatedUnpacked {
    repeated double double_field = 1 [packed=false];
    repeated float float_field = 2 [packed=false];
    repeated int32 int32_field = 3 [packed=false];
    repeated int64 int64_field = 4 [packed=false];
    repeated uint32 uint32_field = 5 [packed=false];
    repeated uint64 uint64_field = 6 [packed=false];
    repeated sint32 sint32_field = 7 [packed=false];
    repeated sint64 sint64_field = 8 [packed=false];
    repeated fixed32 fixed32_field = 9 [packed=false];
    repeated fixed64 fixed64_field = 10 [packed=false];
    repeated sfixed32 sfixed32_field = 11 [packed=false];
    repeated sfixed64 sfixed64_field = 12 [packed=false];
    repeated bool bool_field = 13 [packed=false];
    repeated Color color_field = 16 [packed=false];
}

message OneOf {
    oneof field {
        double double_field = 1;
        float float_field = 2;
        int32 int32_field = 3;
        int64 int64_field = 4;
        uint32 uint32_field = 5;
        uint64 uint64_field = 6;
        sint32 sint32_field = 7;
        sint64 sint64_field = 8;
        fixed32 fixed32_field = 9;
        fixed64 fixed64_field = 10;
        sfixed32 sfixed32_field = 11;
        sfixed64 sfixed64_field = 12;
        bool bool_field = 13;
        string string_field = 14;
        bytes bytes_field = 15;
        Color color_field = 16;
    }
}

message Mixed {
    double double_field_o = 5;
    string string_field_o = 6;
    bytes bytes_field_o = 7;
    Color color_field_o = 8;
    repeated double double_field_r = 9;
    repeated string string_field_r = 10;
    repeated bytes bytes_field_r = 11;
    repeated Color color_field_r = 12;
}

message Nested {
    double double_field_o = 2;
    repeated double double_field_r = 3;
    Color color_field_o = 5;
    repeated Color color_field_r = 6;
    Mixed mixed_field_o = 8;
    repeated Mixed mixed_field_r = 9;
}

// define custom options
extend google.protobuf.MessageOptions {
    int32 my_message_option = 50001;
}
extend google.protobuf.FieldOptions {
    float my_field_option = 50002;
    string my_field_option_str = 50003;

}
extend google.protobuf.EnumOptions {
    bool my_enum_option = 50004;
}
extend google.protobuf.EnumValueOptions {
    string my_enum_value_option = 50005;
}

enum STATE {
    option (my_enum_option) = true;
    START = 0 [(my_enum_value_option) = "Custom enum value option"];
    STOP = 1;
}

message CustomOptionMessage {
    option (my_message_option) = 1234;
    int32 foo = 1 [(my_field_option) = 4.5];
    string bar = 2 [(my_field_option_str) = "String field custom option"];
    STATE state = 3 [(my_field_option_str) = "Field custom option"];
}

